--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   },
   "devDependencies": {
     "browserify": "^13.0.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-ruby-sass": "^2.0.1",
     "gulp-util": "^3.0.7",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
