actually adding files for v0.0.2

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "generator-express",
-  "version": "0.0.1",
+  "name": "generator-followclosely",
+  "version": "0.0.2",
   "ignore": [
     "**/.*",
     "node_modules",
